src/objects/BLND_DFDT_Project__c.object
<CustomObject>
    <fields>
        <fullName>BLND_Account_Link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Link</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>R00N30000002PYjmEAG</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BLND_Archive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Archive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BLND_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>DreamTeam Projects</relationshipLabel>
        <relationshipName>DreamTeam_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BLND_Complete_Tasks__c</fullName>
        <label>Complete Tasks</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BLND_Complete__c</fullName>
        <label>Complete</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BLND_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>DreamTeam Projects</relationshipLabel>
        <relationshipName>DreamTeam_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BLND_Cost_Baseline__c</fullName>
        <label>Cost Baseline</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BLND_Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BLND_Deck__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deck</label>
        <referenceTo>Deck__c</referenceTo>
        <relationshipLabel>DreamTeam Projects</relationshipLabel>
        <relationshipName>DreamTeam_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BLND_Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BLND_Duration_In_Business_Days__c</fullName>
        <label>Duration In Business Days</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BLND_Duration_In_Calendar_Days__c</fullName>
        <label>Duration In Calendar Days</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BLND_Expansion__c</fullName>
        <label>Expansion</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BLND_Extra_Field__c</fullName>
        <label>Extra Field</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BLND_Finish_Baseline__c</fullName>
        <label>Finish Baseline</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BLND_Finish__c</fullName>
        <label>Finish Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BLND_Folder_Link__c</fullName>
        <label>Folder Link</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLND_Joshster__c</fullName>
        <label>Joshster</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BLND_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>DreamTeam Projects</relationshipLabel>
        <relationshipName>DreamTeam_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BLND_Opportunity_Link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Link</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>R00N30000002PYjyEAG</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BLND_Priority__c</fullName>
        <label>Priority</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BLND_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>DreamTeam Projects</relationshipLabel>
        <relationshipName>DreamTeam_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BLND_Project_Fixed_Cost__c</fullName>
        <label>Project Fixed Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BLND_Project_Status__c</fullName>
        <label>Project Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dispatched</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On-Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BLND_Projects__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Projects</label>
        <referenceTo>Projects__c</referenceTo>
        <relationshipLabel>DreamTeam Projects</relationshipLabel>
        <relationshipName>DreamTeam_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BLND_Revenue_Baseline__c</fullName>
        <label>Revenue Baseline</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BLND_Revenue__c</fullName>
        <label>Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BLND_Schedule_Override__c</fullName>
        <label>Schedule Override</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BLND_Schedule__c</fullName>
        <label>Schedule</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BLND_Start_Baseline__c</fullName>
        <label>Start Baseline</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BLND_Start__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BLND_Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Professional Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Engagement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Infrastructure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shared Infrastructure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Success Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development Dept</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BLND_Vacation_List__c</fullName>
        <label>Vacation List</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BLND_Version__c</fullName>
        <label>Version</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BLND_Weight__c</fullName>
        <label>Weight</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BLND_Work_In_Actual_Hours__c</fullName>
        <label>Work In Actual Hours</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BLND_Work_In_Planned_Hours__c</fullName>
        <label>Work In Planned Hours</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BLND_Workday_List__c</fullName>
        <label>Workday List</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BLND_project_name__c</fullName>
        <label>project name</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>DreamTeam Project</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DreamTeam Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>